force-app/main/default/objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Document_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>This Academic Year</fullName>
                </value>
                <value>
                    <fullName>Next Academic Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Decision_10__c</fullName>
        <label>Action/Decision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Decision_11__c</fullName>
        <label>Action/Decision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Decision_12__c</fullName>
        <label>Action/Decision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admissions_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admissions Assessment</label>
        <referenceTo>Admissions_Questionnaire__c</referenceTo>
        <relationshipName>School_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admissions_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admissions File</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>School_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessor_Comments__c</fullName>
        <label>Assessor Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Behaviour__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unnaceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_Date_Created__c</fullName>
        <formula>DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Field_Empty__c</fullName>
        <formula>IF( ISNULL(Date__c),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Field Empty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Updated__c</fullName>
        <formula>IF( ISNULL(Updated_As_Of__c) , Copy_Date_Created__c ,Updated_As_Of__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Action__c</fullName>
        <label>Decision/Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>TEXT(School_to_Share__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_to_share__c</fullName>
        <label>Share with</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Departments</fullName>
                </value>
                <value>
                    <fullName>Headteacher &amp; Head of Admin</fullName>
                </value>
                <value>
                    <fullName>All Academic Staff</fullName>
                </value>
                <value>
                    <fullName>All Administration Staff</fullName>
                </value>
                <value>
                    <fullName>Finance Department</fullName>
                </value>
                <value>
                    <fullName>HR Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discussion_10__c</fullName>
        <label>Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussion_11__c</fullName>
        <label>Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussion_12__c</fullName>
        <label>Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussions_2__c</fullName>
        <label>Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Document(s)</fullName>
                    <default>true</default>
                    <label>Generic Document(s)</label>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Procedure</fullName>
                </value>
                <value>
                    <fullName>Pictures/Graphic Design</fullName>
                </value>
                <value>
                    <fullName>Minutes of Meeting</fullName>
                </value>
                <value>
                    <fullName>Decision Taken</fullName>
                </value>
                <value>
                    <fullName>Job Description</fullName>
                </value>
                <value>
                    <fullName>Staff Appraisal</fullName>
                </value>
                <value>
                    <fullName>Student Admissions</fullName>
                </value>
                <value>
                    <fullName>Approved Budget</fullName>
                </value>
                <value>
                    <fullName>Financial Report</fullName>
                </value>
                <value>
                    <fullName>Job Application Document</fullName>
                </value>
                <value>
                    <fullName>Generic HR Document</fullName>
                </value>
                <value>
                    <fullName>Legal Document</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Induction Training documents</fullName>
                </value>
                <value>
                    <fullName>School Uniform Procedures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Linked__c</fullName>
        <formula>IF(OR(Admissions_File__c =&quot;&quot;, Person_Company__c =&quot;&quot;, Student_Group__c =&quot;&quot;),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Linked?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Folder_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Document Folder</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Document__c</referenceTo>
        <relationshipName>Online_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Concepts__c</fullName>
        <label>General Concepts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unnaceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Level_Owner__c</fullName>
        <formula>IF( OR(Owner:User.Profile.Name =&quot;Group Director&quot;,Owner:User.Profile.Name =&quot;System Administrator&quot;,CONTAINS( Owner:User.UserRole.Name ,&quot;Group&quot;)),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Level Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_in_Handbook__c</fullName>
        <formula>IF( OR(TEXT(Staff_Handbook__c)= &quot;&quot;,TEXT(Staff_Handbook__c)=&quot;Don&apos;t Include&quot;),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Included in Handbook?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Class_Participation__c</fullName>
        <label>Interest/Class Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unnaceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>IF($User.Username= Owner:User.Username,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Being_Addressed__c</fullName>
        <label>Issue Being Addressed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords_for_Search__c</fullName>
        <label>Keywords for Search</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Linked__c</fullName>
        <formula>IF(AND(Admissions_File__c =&quot;&quot;, Person_Company__c =&quot;&quot;),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Linked?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Content__c</fullName>
        <label>Notes/Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unnaceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person/Company:</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>School_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_10__c</fullName>
        <label>Person Responsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_11__c</fullName>
        <label>Person Responsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_12__c</fullName>
        <label>Person Responsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <label>Person Responsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_s_Making_Decision__c</fullName>
        <label>Person(s) Making Decision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>TEXT(Person_Company__r.Position__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reading__c</fullName>
        <label>Reading</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability Group</fullName>
                </value>
                <value>
                    <fullName>Middle Ability Group</fullName>
                </value>
                <value>
                    <fullName>Low Ability Group</fullName>
                </value>
                <value>
                    <fullName>Below level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_To__c</fullName>
        <label>Reporting To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Copy__c</fullName>
        <formula>IF(
   TEXT(School_to_Share__c) = &quot;&quot;,
   &quot;Group Only&quot;,
   TEXT(School_to_Share__c)
   )</formula>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Documents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Documents</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipName>School_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <formula>IF(
   TEXT(School_to_Share__c) = &quot;&quot;, 
   &quot;The British Schools Foundation&quot;, 
   TEXT(School_to_Share__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_to_Share__c</fullName>
        <label>School Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Schools</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>Ukraine International School</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <formula>IF(TEXT(School_to_Share__c)=&quot;All Schools&quot;,&quot;BSF Group-wide&quot;&amp;&quot; (&quot;&amp;LEFT( TEXT(Staff_Handbook__c),1)&amp;&quot;)&quot;, &quot;School Specific   &quot;&amp;&quot;(&quot;&amp;LEFT( TEXT(Staff_Handbook__c),1)&amp;&quot;)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaking_and_Listening__c</fullName>
        <label>Speaking and Listening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability Group</fullName>
                </value>
                <value>
                    <fullName>Middle Ability Group</fullName>
                </value>
                <value>
                    <fullName>Low Ability Group</fullName>
                </value>
                <value>
                    <fullName>Below level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Handbook__c</fullName>
        <label>Staff Handbook Chapter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t Include</fullName>
                    <default>true</default>
                    <label>Don&apos;t Include</label>
                </value>
                <value>
                    <fullName>A. General</fullName>
                </value>
                <value>
                    <fullName>B. School Life</fullName>
                </value>
                <value>
                    <fullName>C. School Welfare</fullName>
                </value>
                <value>
                    <fullName>D. General Organisation</fullName>
                </value>
                <value>
                    <fullName>E. Academic Organisation</fullName>
                </value>
                <value>
                    <fullName>F. Curriculum</fullName>
                </value>
                <value>
                    <fullName>G. Administration</fullName>
                </value>
                <value>
                    <fullName>H. ICT</fullName>
                </value>
                <value>
                    <fullName>I. School Services</fullName>
                </value>
                <value>
                    <fullName>J. Personnel and Employment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Member_Copy__c</fullName>
        <label>Staff Member Copy</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Name__c</fullName>
        <formula>Person_Company__r.FirstName &amp;&quot; &quot;&amp;Person_Company__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipName>School_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within Present ability range of class</fullName>
                </value>
                <value>
                    <fullName>Approaching/has potential for readiness</fullName>
                </value>
                <value>
                    <fullName>Significantly short of readiness for classroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_Changes2__c</fullName>
        <label>Summary of Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Changes__c</fullName>
        <label>Summary of Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Updated_As_Of__c</fullName>
        <label>Updated As Of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated_Formula__c</fullName>
        <formula>text(Day(Date_Updated__c))&amp;&quot;/&quot;&amp;text(Month(Date_Updated__c))&amp;&quot;/&quot;&amp;Text(Year(Date_Updated__c))

&amp;&quot; (&quot;&amp; LastModifiedBy.FirstName&amp;&quot; &quot;&amp;LastModifiedBy.LastName&amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writing__c</fullName>
        <label>Writing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability Group</fullName>
                </value>
                <value>
                    <fullName>Middle Ability Group</fullName>
                </value>
                <value>
                    <fullName>Low Ability Group</fullName>
                </value>
                <value>
                    <fullName>Below level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copy_modify__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>copy modify</label>
        <type>DateTime</type>
    </fields>
    <label>School Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Legal_Documents</fullName>
        <columns>NAME</columns>
        <columns>Document_Category__c</columns>
        <columns>Date_Updated__c</columns>
        <columns>School_Copy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Legal Document</value>
        </filters>
        <label>07A. Legal Documents</label>
    </listViews>
    <listViews>
        <fullName>Minutes</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Attendees__c</columns>
        <columns>School_Copy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Minutes of Meeting</value>
        </filters>
        <label>02A. School Minutes of Meetings</label>
    </listViews>
    <listViews>
        <fullName>X10A_Uniform_Procedures_and_Policies</fullName>
        <columns>NAME</columns>
        <columns>Date_Updated__c</columns>
        <columns>School_Name__c</columns>
        <columns>Department_to_share__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>School Uniform Procedures</value>
        </filters>
        <label>10A. Uniform Procedures and Policies</label>
    </listViews>
    <listViews>
        <fullName>X11A_Induction_Training_documents</fullName>
        <booleanFilter>1 OR (2 AND 3) OR (4 AND 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Date_Updated__c</columns>
        <columns>School_to_Share__c</columns>
        <columns>Department_to_share__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Induction Training documents</value>
        </filters>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Policy</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Parent Communication Policy</value>
        </filters>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Procedure</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Student Groups Management Guidelines</value>
        </filters>
        <label>11A. Induction Training documents</label>
    </listViews>
    <listViews>
        <fullName>X1_Policies</fullName>
        <columns>Staff_Handbook__c</columns>
        <columns>NAME</columns>
        <columns>Scope__c</columns>
        <columns>Date_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Included_in_Handbook__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>01A. Staff Handbook &amp; Policies</label>
    </listViews>
    <listViews>
        <fullName>X2B_Group_Level_Minutes_of_Meetings</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Document_Category__c</columns>
        <columns>Location__c</columns>
        <columns>Attendees__c</columns>
        <columns>School_Copy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Minutes of Meeting</value>
        </filters>
        <filters>
            <field>Group_Level_Owner__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>02B. Group Level Minutes of Meetings</label>
    </listViews>
    <listViews>
        <fullName>X3A_Best_Pictures</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Scope__c</columns>
        <columns>Date_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Pictures/Graphic Design</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Best</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Top</value>
        </filters>
        <label>03A. Best Pictures</label>
    </listViews>
    <listViews>
        <fullName>X3B_Logos</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Scope__c</columns>
        <columns>Date_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Pictures/Graphic Design</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Logos</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Logo</value>
        </filters>
        <label>03B. Logos</label>
    </listViews>
    <listViews>
        <fullName>X3B_Stationary_Files</fullName>
        <booleanFilter>1 AND (2 or 3 or 4 or 5 or 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Scope__c</columns>
        <columns>Date_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Pictures/Graphic Design</value>
        </filters>
        <filters>
            <field>Keywords_for_Search__c</field>
            <operation>contains</operation>
            <value>Letterhead</value>
        </filters>
        <filters>
            <field>Keywords_for_Search__c</field>
            <operation>contains</operation>
            <value>Stationary</value>
        </filters>
        <filters>
            <field>Keywords_for_Search__c</field>
            <operation>contains</operation>
            <value>Headed Paper</value>
        </filters>
        <filters>
            <field>Keywords_for_Search__c</field>
            <operation>equals</operation>
            <value>Card</value>
        </filters>
        <filters>
            <field>Keywords_for_Search__c</field>
            <operation>equals</operation>
            <value>Cards</value>
        </filters>
        <label>03C. Stationary Files</label>
    </listViews>
    <listViews>
        <fullName>X4A_Forms</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Scope__c</columns>
        <columns>Date_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Form</value>
        </filters>
        <label>04A. Forms</label>
    </listViews>
    <listViews>
        <fullName>X6A_Buildings_Construction</fullName>
        <booleanFilter>(1 or 2 or 3 or 4 or 5 or 6) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Document_Category__c</columns>
        <columns>Date_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Buildings</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Building</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Campus</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Landlord</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Rent</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Lease</value>
        </filters>
        <filters>
            <field>Document_Category__c</field>
            <operation>notEqual</operation>
            <value>Minutes of Meeting</value>
        </filters>
        <label>06A. Buildings &amp; Construction</label>
    </listViews>
    <listViews>
        <fullName>X8A_Budgets</fullName>
        <booleanFilter>5 AND ((1 AND 2) OR (3 AND 4))</booleanFilter>
        <columns>NAME</columns>
        <columns>Document_Category__c</columns>
        <columns>School_Copy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>Next Academic Year</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_FISCAL_YEAR</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>This Academic Year</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_FISCAL_YEAR</value>
        </filters>
        <filters>
            <field>Document_Category__c</field>
            <operation>equals</operation>
            <value>Approved Budget</value>
        </filters>
        <label>08A. Budgets This Year</label>
    </listViews>
</CustomObject>